website/main-pages/ballerina.io-website-theme/css/philosophy-page.css
/* ... */
.cCloudNativeNavLeftSide {
    max-width: 185px;
}

.cIntegrationFrameworkNavLeftSide {
    max-width: 300px;
}

.cCloudNativeControls ul {
    padding: 0;
    margin-bottom: 30px;
}

.cCloudNativeControls li,
.cCloudNativeControls li a {
    list-style: none;
    font-family: "CalibreWeb-Semibold";
    font-size: 14px;
    letter-spacing: 1px;
    font-weight: 400;
    line-height: 20px;
    color: #585556;
    text-transform: uppercase;
    cursor: pointer;
}

.cCloudNativeControls li.activelink {
    color: #23b8b1;
}

.cPhilosophyWhite.cCloudNative {
    padding-bottom: 20px;
    padding-left: 0;
    padding-right: 0;
}

.cPhil-title-boxes-container.cPhil-title-boxes-container-white.cPhil-title-boxes-Gray {
    background-color: #f5f6f6;
    background-image: none;
    width: 100%;
    padding-bottom: 25px;
}

.cPhil-title-boxes.cCloudNative {
    background-image: none;
}

.cPhil-title-boxes-container.cPhil-title-boxes-container-white.cPhil-title-boxes-Gray p {
    padding: 0;
    margin: 0;
    width: 100%;
}


/* TYPE SAFETY */

#type-system-code {
    min-height: 510px;
}

#type-system-code code {
    padding: 4px 6px;
    text-align: left;
    font-size: 14px;
    background: #f5f6f6;
    min-height: 510px;
    line-height: 20px;
}

#type-system-code .line-numbers-wrap {
    display: none;
}

.type-system-code-tab {
    min-height: 500px;
}


/* highlight code segments in phylosophy page */

#ballerina_grammar_2 {
    position: relative;
}

.cCodeDesription {
    padding-left: 14px;
    padding-right: 30px;
    min-width: 100%;
    background-image: url("/img/white-arrow.svg");
    background-position: left -14px;
    background-repeat: no-repeat;
    margin-bottom: 10px;
}

div.cCodeDesription.gray {
    background-image: url("/img/gray-arrow.svg");
}

.cCodeDesription>div {
    background: #ffffff;
    font-size: 15px;
    padding: 7px 20px;
}

.cCodeDesription.gray>div {
    background: #f2f3f4;
}

.cCodeDesription:hover,
.cCodeDesription.gray:hover,
.cCodeDesription.active,
.cCodeDesription.gray.active {
    padding-left: 14px;
    background-image: url("/img/green-arrow.svg");
    background-position: left -15px;
    background-repeat: no-repeat;
}

.cCodeDesription:hover>div,
.cCodeDesription.active>div {
    background-color: #22b7b1;
    color: #fff;
}

.cCodeDesription.gray:hover>div,
.cCodeDesription.gray.active>div {
    background-color: #22b7b1;
}

.cCodeDesription:hover>div p,
.cCodeDesription.active>div p {
    color: #fff;
}

div.text-display {
    position: relative;
}

div.text-display div.cCodeDesription {
    position: absolute;
    margin-bottom: 20px;
}

div.text-display div.cCodeDesription p {
    font-size: 15px;
}


/*************/

.cCloudNativeCode {
    background-color: #f5f6f6;
    width: 100%;
    padding: 30px;
    box-shadow: -5px 6px 8px rgba(0, 0, 0, 0.2);
    transition: all 0.2s ease 0s
}

.cCloudNativeCode .view-lines {
    background-color: #ffffff !important;
}

.cIntegrationCode {
    background-color: #ffffff;
    width: 100%;
    padding: 5px;
    box-shadow: -5px 6px 8px rgba(0, 0, 0, 0.2);
    transition: all 0.2s ease 0s
}

.cIntegrationCode .view-lines {
    background-color: #f5f6f6;
}

.cIntegrationCode code,
.codeNativeBox code {
    z-index: 2;
}

.code-wrapper {
    position: relative;
}

.overlay-highlight,
.output-overlay-highlight {
    width: 100%;
    background: #34c9bf;
    opacity: 0.2;
    position: absolute;
}

.cIntegrationCode .overlay-highlight,
.cIntegrationCode .output-overlay-highlight,
.codeNativeBox .overlay-highlight,
.codeNativeBox .output-overlay-highlight {
    opacity: 0;
    z-index: 3;
}

.cIntegrationCode .overlay-highlight:hover,
.cIntegrationCode .output-overlay-highlight:hover,
.codeNativeBox .overlay-highlight:hover,
.codeNativeBox .output-overlay-highlight:hover {
    opacity: 0.2 !important;
}


/*.cCloudNativeCode , .cIntegrationCode {
    padding-top: 30px;
}*/

.cCloudNativeContainer,
.cIntegrationFramework {
    /*    padding-top: 17%;*/
}

.cLanguageFeaturesContainer {
    background: #f5f6f6;
    padding: 40px 30px;
    display: inline-block;
    width: 100%;
}

.cLanguageFeatures li {
    list-style: none;
    padding: 5px 0;
    border-bottom: 1px solid #cecfd0;
    width: 100%;
    font-size: 14px;
    padding-left: 10px;
    color: #57595d;
    line-height: 22px;
    font-weight: 300;
}

.cLanguageFeatures li.cTableTitle {
    padding-left: 0;
    font-weight: 600 !important;
}

.cLanguageFeatures ul {
    padding: 0;
    margin: 0;
    border-top: 1px solid #cecfd0;
}

.cLanguageFeatures li a {
    color: #57595d !important;
}

.cLanguageFeatures li a:hover {
    color: #3ad1ca !important;
}

.cOpenSourceContainer {
    background: #f5f6f6;
    padding: 40px 30px;
    display: inline-block;
    width: 100%;
}

.OpenSourceTable {
    width: 100%;
    font-size: 16px;
    line-height: 24px;
    font-weight: 200;
}

.OpenSourceTable td {
    border-bottom: 1px solid #cecfd0;
    padding: 5px 0;
    text-align: left;
    vertical-align: top;
    height: 50px;
    font-size: 14px;
}

.OpenSourceTable td:first-child {
    padding-right: 20px;
    white-space: nowrap;
}

.OpenSourceTable td a {
    color: #23b8b1;
}

.OpenSourceTable td:nth-child(3) {
    width: 26px;
}

.cType {
    width: 20%;
}

.OpenSourceTable td.cGitLink {
    text-align: right;
}

.OpenSourceTableRightWrapper {
    padding-left: 40px;
}

@media (max-width: 992px) {
    .OpenSourceTableRightWrapper {
        padding-left: 15px;
    }
    .OpenSourceTable td:first-child {
        width: 170px;
    }
}

.cGitLink a {
    background-repeat: no-repeat;
    background-image: url("../img/github-logo.svg");
    width: 20px;
    height: 20px;
    background-size: 100%;
    display: inline-block;
}


/*Why did we build Ballerina? */

.cPhil-Gray,
.cPhil-green {
    font-size: 26px;
    text-align: center;
    color: #ffffff;
    display: inline-block;
    width: 100%;
    min-height: 270px;
}
/* ... */

